re-added authors for now

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -74,34 +74,34 @@
 
 \title{BehaviorSim Model Builder: Lessons Learned Designing for JiTAI Developers}
 
-% \numberofauthors{5}
-% \author{%
-%   \alignauthor{Tylar Murray \\
-%     \affaddr{University of South Florida}\\% Department of Electrical Engineering}\\
-%     \affaddr{Tampa, USA}\\
-%     \email{tylarmurray@mail.usf.edu}\\
-%     }
-%   \alignauthor{Eric Hekler\\
-%     \affaddr{Arizona State University}\\% School of Nutrition and Health Promotion}\\
-%     \affaddr{Phoenix, USA}\\
-%     %\email{e-mail address}
-%     }
-%   \alignauthor{Donna Spruijt-Metz \\
-%     \affaddr{University of Southern California}\\% Center for Economic and Social Research}\\
-%     \affaddr{ Los Angeles, USA}\\
-%     %\email{e-mail address}\\
-%     }
-%   \alignauthor{Daniel E. Rivera \\
-%     \affaddr{Arizona State University}\\% Control Systems Engineering Laboratory}\\
-%     \affaddr{Tempe, USA}\\
-%     %\email{e-mail address}\\
-%     }
-%   \alignauthor{Andrew Raij \\
-%     \affaddr{University of Central Florida}\\% Institute for Simulation and Training}\\
-%     \affaddr{Orlando, USA}\\
-%     %\email{e-mail address}\\
-%     }
-% }
+\numberofauthors{5}
+\author{%
+  \alignauthor{Tylar Murray \\
+    \affaddr{University of South Florida}\\% Department of Electrical Engineering}\\
+    \affaddr{Tampa, USA}\\
+    \email{tylarmurray@mail.usf.edu}\\
+    }
+  \alignauthor{Eric Hekler\\
+    \affaddr{Arizona State University}\\% School of Nutrition and Health Promotion}\\
+    \affaddr{Phoenix, USA}\\
+    %\email{e-mail address}
+    }
+  \alignauthor{Donna Spruijt-Metz \\
+    \affaddr{University of Southern California}\\% Center for Economic and Social Research}\\
+    \affaddr{ Los Angeles, USA}\\
+    %\email{e-mail address}\\
+    }
+  \alignauthor{Daniel E. Rivera \\
+    \affaddr{Arizona State University}\\% Control Systems Engineering Laboratory}\\
+    \affaddr{Tempe, USA}\\
+    %\email{e-mail address}\\
+    }
+  \alignauthor{Andrew Raij \\
+    \affaddr{University of Central Florida}\\% Institute for Simulation and Training}\\
+    \affaddr{Orlando, USA}\\
+    %\email{e-mail address}\\
+    }
+}
 
 \maketitle
 
