added another JiTAI-personalization ref

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -125,7 +125,7 @@ Lessons learned through iterations of this tool, a JiTAI developer user persona,
 % JiTAIs?
 % * what is the problem with current behavioral science research methods?
 With the increasing prevalence of wearable technologies and personal health data, behavioral researchers are becoming increasingly overwhelmed with data.
-Researchers have seen the potential for optimizing a behavioral intervention to suit not only the user \cite{beck2010challenges}, but also the context \cite{brailsford2010towards, collins2004}. 
+Researchers have seen the potential for optimizing a behavioral intervention to suit not only the user \cite{dallery2014optimizing, beck2010challenges}, but also the context \cite{brailsford2010towards, collins2004}. 
 Just-in-Time Adaptive Interventions (JiTAIs) promise to provide the optimal nudge at the optimal time to aid users looking to change their behavior \cite{nahum2014}.
 Imagine, for example, an anti-stress application which knows not to interrupt work meetings, but also knows when to play a favorite song to help relieve stress on the drive home.
 Or consider a smoking cessation pap that knows precisely when and where craving is most likely, and distracts with a game before the desire to smoke is noticeable.
