--- a/sample.bib
+++ b/sample.bib
@@ -30,6 +30,17 @@
   publisher={ACM}
 }
 
+@article{dallery2014optimizing,
+  title={Optimizing behavioral health interventions with single-case designs: from development to dissemination},
+  author={Dallery, Jesse and Raiff, Bethany R},
+  journal={Translational behavioral medicine},
+  volume={4},
+  number={3},
+  pages={290--303},
+  year={2014},
+  publisher={Springer}
+}
+
 @article{kay2012creating,
   title={Creating personalized systems that people can scrutinize and control: Drivers, principles and experience},
   author={Kay, Judy and Kummerfeld, Bob},
