added conclusion stub

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -324,11 +324,10 @@ Furthermore, a JiTAI development software requires a standardized behavioral mod
 Thus, personalization of the software interface - to adapt the process or to offer relevant information\cite{kay2012creating} - can greatly improve user experience in this domain.
 
 \section{conclusion}
-TODO!
+Our continued development efforts on the BehaviorSim Model Builder have revealed unique characteristics of our target population, and these findings may inform development of future projects targeting similar users or user goals.
+We have presented a user persona based on qualitative...
 
-\section{Acknowledgments}
-
-TODO!
+%\section{Acknowledgments}
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
