minor grammar and verbiage adjustments

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -130,7 +130,7 @@ Just-in-Time Adaptive Interventions (JiTAIs) promise to provide the optimal nudg
 Imagine, for example, an anti-stress application which knows not to interrupt work meetings, but also knows when to play a favorite song to help relieve stress on the drive home.
 Or consider a smoking cessation application that knows precisely when and where craving is most likely, and distracts with a game before the desire to smoke is noticeable.
 
-The impending wave of context-aware\cite{schilit1994context}, affective computing\cite{picard2000affective} applications seems to be the holy grail of behavior change, but researchers are finding that our models of human behavior are not capable of supporting this level of interaction.
+The impending wave of context-aware\cite{schilit1994context}, affective computing\cite{picard2000affective} applications seems to be the holy grail of behavior change, but researchers are finding that models of human behavior are not capable of supporting this level of interaction.
 Existing  models of behavior do not offer the granularity and specificity needed for these applications\cite{riley2011health}.
 Currently, psychological models of human behavior act as a guide for behavioral scientists looking to predict behavior, but are rarely computational in nature - making direct application to adaptive systems impossible.
 Methods for creating computational models of human behavior are not well defined, but some early concepts have been published \cite{rivera2013systems}.
@@ -146,7 +146,7 @@ We present insights gained at each stage of the development process, followed by
 \subsection{Survey of Behavioral Scientists}
 A preliminary survey was given to a group of behavioral scientists in order to gauge the general perceptions and opinions on the development of behavioral models to support JiTAIs.
 In this survey we focused on a few key elements of the model building process to greatly simplify and shorten the modeling exercise.
-A contextual and behavioral outcome based on physical activity were given, and users efforts were focused on defining the inner workings of the human system within these constraints.
+Contextual and behavioral outcomes based on physical activity were given, and users efforts were focused on defining the inner workings of the human system within these constraints.
 Questions asked to describe the human system included asking participants to sketch a time-series representing their expectations, to list relevant constructs, and describe their constructs they relate to outcomes.
 We also asked participants to complete survey items about the barriers facing modeling and simulation in behavioral science.
 Approximately 50 surveys were distributed following presentations on behavioral modeling and simulation at the 35th Annual Conference of the Society of Behavioral Medicine. 
@@ -307,7 +307,7 @@ Thus, allowing for quick iterations allows for the user to more quickly apply ne
 %        simulations
 %        data-reconciliation
 To encourage iteration in the JiTAI development process, assessment tools available part-way through the process - like our mini-simulation time-series - allow users to test their mental model of the system against its digital representation.
-Allowing for more assessment points throughout JiTAI development allows users to identify problems early so they may iterate before the error cascades further through the process.
+Allowing for more assessment points throughout JiTAI development allows users to identify problems early and iterate before the error cascades further through the process.
 
 \subsubsection{High-Level Visuals to De-internalize Models}
 %    model state-storage & reference visuals to de-internalize mental model
@@ -326,8 +326,8 @@ This dual-viewing-area approach works well for comparing variable details, but t
 \subsubsection{Adaptive Interface}
 %    customizable interface & concept/model/data display tailored to research area
 Though our JiTAI developer persona yields widely applicable general user stories, it is also important to recognize the diversity of the JiTAI developer user group.
-JiTAIs are applicable to any area of behavior change; just a few popular proposed JiTAI applications are: management of eating behaviors, physical activity, smoking cessation, drug abuse, PTSD, and stress.
-Within each of these many application domains, are a myriad of behavioral theories - further adding to the diversity of the user group.
+JiTAIs are applicable to any area of behavior change; just a few popular proposed JiTAI applications include management of eating behaviors, physical activity, smoking cessation, drug abuse, PTSD, and stress.
+Within each of these many application domains are a myriad of behavioral theories - further adding to the diversity of the user group.
 Each of these sub-user-groups may have slightly different needs as they develop a JiTAI.
 Furthermore, a JiTAI development software requires a standardized behavioral model or JiTAI format, and with that comes the opportunity to enable easy sharing and searching of JiTAI designs.
 Thus, personalization of the software interface - to adapt the process or to offer relevant information\cite{kay2012creating} - can greatly improve user experience in this domain.
