added keywords and classification stmt

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -111,15 +111,11 @@ Our findings are based off of a user-survey of behavioral scientists, expert-pan
 Lessons learned through iterations of this tool, a JiTAI developer user persona, and guidelines for those targeting behavioral scientists as a user group are highlighted. 
 \end{abstract}
 
-%TODO:
-\keywords{Authors' choice; of terms; separated; by semi\-colons;
-  commas, within terms only; this section is required.}
+\keywords{JiTAI; behavior change; just-in-time; adaptive intervention}
 
-%TODO:
 \category{H.5.m.}{Information Interfaces and Presentation
-  (e.g. HCI)}{Miscellaneous} \category{See
-  \url{http://acm.org/about/class/1998/} for the full list of ACM
-  classifiers. This section is required.}{}{}
+  (e.g. HCI)}{Miscellaneous} 
+  %\category{See \url{http://acm.org/about/class/1998/} for the full list of ACM classifiers. This section is required.}{}{}
 
 \section{Introduction}
 % JiTAIs?
