closed off ending of concl sect for pre-final backup submit

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -330,7 +330,7 @@ Thus, personalization of the software interface - to adapt the process or to off
 
 \section{conclusion}
 Our continued development efforts on the BehaviorSim Model Builder have revealed unique characteristics of our target population, and these findings may inform development of future projects targeting similar users or user goals.
-We have presented a user persona based on qualitative...
+We have presented a user persona based on our qualitative methods along with guidelines to aid future work in this area.
 
 %\section{Acknowledgments}
 
