--- a/proceedings.tex
+++ b/proceedings.tex
@@ -329,8 +329,18 @@ Furthermore, a JiTAI development software requires a standardized behavioral mod
 Thus, personalization of the software interface - to adapt the process or to offer relevant information\cite{kay2012creating} - can greatly improve user experience in this domain.
 
 \section{conclusion}
-Our continued development efforts on the BehaviorSim Model Builder have revealed unique characteristics of our target population, and these findings may inform development of future projects targeting similar users or user goals.
-We have presented a user persona based on our qualitative methods along with guidelines to aid future work in this area.
+%Our continued development efforts on the BehaviorSim Model Builder have revealed unique characteristics of our target population, and these findings may inform development of future projects targeting similar users or user goals.
+%We have presented a user persona based on our qualitative methods along with guidelines to aid future work in this area.
+In the quantified self era, we can now capture detailed, high frequency, context-specific measures of human behavior. 
+Access to such data has the potential to change personal health, if only we could make sense of the hidden insights held within these data. 
+Just-in-Time Adaptive Interventions are one application which stands to benefit from these insights and which may have great impact in applied behavioral health.
+One approach is to apply systems-thinking to help model and understand the data.
+The challenge is that health professional and scientists do not usually have the experience or tools to apply systems thinking to health challenges.
+
+In this note, we describe preliminary work on understanding how HCI and user-centered iterative design can be used to transform these data into positive behavioral health outcomes.  
+We ran several rounds of user-centered iterative design, and identified a driving user persona identified and design guidelines for next-generation tools for behavioral health. 
+In particular, our qualitative analysis indicates behavioral scientists need: 1) ways to gain expertise in systems-thinking, 2) rapid iteration through multiple theoretical designs, 3) managed cognitive load when analyzing complex models using visualization of systems and their dynamics, and 4) personalization of such tools to the behavioral problem at hand, given the great diversity and complexity of human behavior.
+Taking these guidelines into account, we are evolving the BehaviorSim system to better enable behavioral health researchers and practitioners to  leverage high frequency, context-specific measurements and design predictive, preventive, personalized and participatory health interventions\cite{hood2011predictive}.
 
 %\section{Acknowledgments}
 
