--- a/sample.bib
+++ b/sample.bib
@@ -41,6 +41,17 @@
   publisher={Springer}
 }
 
+@article{hood2011predictive,
+  title={Predictive, personalized, preventive, participatory (P4) cancer medicine},
+  author={Hood, Leroy and Friend, Stephen H},
+  journal={Nature Reviews Clinical Oncology},
+  volume={8},
+  number={3},
+  pages={184--187},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
 @article{kay2012creating,
   title={Creating personalized systems that people can scrutinize and control: Drivers, principles and experience},
   author={Kay, Judy and Kummerfeld, Bob},
